rearrange, fix directory filter align (shows-list-v2)

--- a/shows-list/v2/index.css
+++ b/shows-list/v2/index.css
@@ -32,6 +32,13 @@ body {
 	cursor: pointer;
 }
 
+.filter-bar {
+	display: flex;
+	cursor: pointer;
+	padding-bottom: 1em;
+    justify-content: center;
+}
+
 .header, .disclaimer {
 	font-size: small;
 }
@@ -170,7 +177,7 @@ body {
 }
 
 .filter {
-	margin-left: 8px;
+	/* margin-left: 8px; */
 	font-size: 0.8em;
     padding: 2px;
 }
